--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -214,7 +214,7 @@
                 var token = Cookies.get('token'); // Giả sử token được lưu trong cookie
         
                 if (!token) {
-                    alert('Bạn chưa đăng nhập. Vui lòng đăng nhập để đổi mật khẩu!.');
+                    alert('Bạn chưa đăng nhập. Vui lòng đăng nhập để đổi mật khẩu.');
                     return;
                 }
         
