--- a/views/usercart.ejs
+++ b/views/usercart.ejs
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,9 +11,7 @@
 
     <!-- Custom fonts for this template-->
     <link href="../public/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template-->
     <link href="../public/css/sb-admin-2.min.css" rel="stylesheet">
@@ -59,38 +55,16 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-                    aria-expanded="true" aria-controls="collapsePages">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Pages</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
+                        <h6 class="collapse-header">Page</h6>
                         <a class="collapse-item" href="/login">Login</a>
-                        <a class="collapse-item" href="/register">Register</a>
                         <a class="collapse-item" href="/changePassword">Change Password</a>
-                        <a class="collapse-item" href="/forgotPassword">Forgot Password</a>
-                    </div>
-                </div>
-            </li>
-
-
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Chức năng</span>
-                </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Chức năng:</h6>
-                        <a class="collapse-item" href="/adminProduct">Sản Phẩm</a>
-                        <a class="collapse-item" href="/adminUser">User</a>
-                        <a class="collapse-item" href="/adminCategory">Danh mục sản phẩm</a>
-                        <a class="collapse-item" href="/adminOrder">Đơn hàng</a>
+                        <a class="collapse-item" href="/usercart">Cart</a>
                     </div>
                 </div>
             </li>
@@ -128,8 +102,7 @@
                     </button>
 
                     <!-- Topbar Search -->
-                    <form
-                        class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                    <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                         <div class="input-group">
                             <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
                                 aria-label="Search" aria-describedby="basic-addon2">
@@ -146,18 +119,14 @@
 
                         <!-- Nav Item - Search Dropdown (Visible Only XS) -->
                         <li class="nav-item dropdown no-arrow d-sm-none">
-                            <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-search fa-fw"></i>
                             </a>
                             <!-- Dropdown - Messages -->
-                            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
-                                aria-labelledby="searchDropdown">
+                            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
                                 <form class="form-inline mr-auto w-100 navbar-search">
                                     <div class="input-group">
-                                        <input type="text" class="form-control bg-light border-0 small"
-                                            placeholder="Search for..." aria-label="Search"
-                                            aria-describedby="basic-addon2">
+                                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
                                         <div class="input-group-append">
                                             <button class="btn btn-primary" type="button">
                                                 <i class="fas fa-search fa-sm"></i>
@@ -170,15 +139,13 @@
 
                         <!-- Nav Item - Alerts -->
                         <li class="nav-item dropdown no-arrow mx-1">
-                            <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-bell fa-fw"></i>
                                 <!-- Counter - Alerts -->
                                 <span class="badge badge-danger badge-counter">3+</span>
                             </a>
                             <!-- Dropdown - Alerts -->
-                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="alertsDropdown">
+                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
                                 <h6 class="dropdown-header">
                                     Alerts Center
                                 </h6>
@@ -219,8 +186,6 @@
                             </div>
                         </li>
 
-                   
-
                         <!-- Nav Item - User Information -->
                        
 
@@ -234,29 +199,12 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Sản phẩm</h1>
-                        <button id="btnAddProduct" class="btn btn-primary">Thêm Sản Phẩm</button>
                     </div>
 
                     <!-- Content Row -->
-                    <div class="container">
-                        <h2>Danh sách sản phẩm</h2>
-                        <div class="table-responsive">
-                            <table class="table table-bordered" id="productTable">
-                                <thead>
-                                    <tr>
-                                        <th>Tên</th>
-                                        <th>Danh Mục</th>
-                                        <th>Giá</th>
-                                        <th>Hình Ảnh</th>
-                                        <th>Chức Năng</th>  
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <!-- Các dòng sản phẩm sẽ được thêm vào đây bằng JavaScript -->
-                                </tbody>
-                            </table>
-                        </div>
+                    <div class="container mt-5">
+                        <h1 class="mb-3">Giỏ hàng của bạn</h1>
+                        <div id="cartItems"></div>
                     </div>
                 </div>
                 <!-- /.container-fluid -->
@@ -286,8 +234,7 @@
     </a>
 
     <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -318,65 +265,109 @@
     <!-- Page level plugins -->
     <script src="../public/vendor/chart.js/Chart.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"></script> 
     <script>
-       $(document).ready(function() {
-    $.ajax({
-        url: '/product/',  // Đảm bảo URL này đúng với cấu hình của bạn
-        type: 'GET',
-        success: function(response) {
-            if(response.success) {
-                const products = response.data;
-                products.forEach(product => {
-                    console.log(product._id);
-                    $('#productTable tbody').append(`
-                        <tr>
-                            <td>${product.name}</td>
-                            <td>${product.categoryName}</td>
-                            <td>${product.price}</td>
-                            <td><img src="/public/${product.image}" alt="Hình ảnh sản phẩm" style="width: 100px;"></td>
-                            <td>
-                                <a href="/adminProduct_Edit?id=${product._id}" class="btn btn-primary">Chỉnh sửa</a> <!-- Thêm nút chỉnh sửa -->
-                                <button onclick="deleteProduct('${product._id}')" class="btn btn-danger">Xóa</button>
-                            </td>
-                        </tr>
-                    `);
-                });
-            } else {
-                alert('Lỗi khi tải dữ liệu: ' + response.message);
-            }
-        },
-        error: function() {
-            alert('Không thể kết nối đến server.');
-        }
-    });
-});
 $(document).ready(function() {
-        $('#btnAddProduct').click(function() {
-            window.location.href = '/adminProduct_Add'; // Điều hướng đến trang thêm danh mục khi nhấn nút "Thêm Danh Mục"
-        });
-    });
-        function deleteProduct(id) {
-            if (confirm('Bạn có chắc chắn muốn xóa sản phẩm này không?')) {
-                $.ajax({
-                    url: `/product/${id}`,
-                    type: 'DELETE',
-                    success: function(response) {
-                        if(response.success) {
-                            alert('Sản phẩm đã được xóa thành công.');
-                            location.reload(); // Tải lại trang để cập nhật danh sách
-                        } else {
-                            alert('Lỗi khi xóa sản phẩm: ' + response.message);
-                        }
-                    },
-                    error: function() {
-                        alert('Không thể kết nối đến server khi xóa sản phẩm.');
-                    }
-                });
+    var token = Cookies.get('token'); // Giả sử token được lưu trong cookie
+        
+                if (!token) {
+                    alert('Bạn chưa đăng nhập. Vui lòng đăng nhập để đổi mật khẩu.');
+                    return;
+                }
+    function fetchCart() {
+        $.ajax({
+            url: '/cart/',
+            type: 'GET',
+            
+            headers: {
+                Authorization: 'Bearer ' + token // token được lưu trong localStorage
+            },
+            success: function(response) {
+                if (response.success) {
+                    renderCart(response.data.cart.items); // Truy cập chính xác đến mảng items
+                } else {
+                    $('#cartItems').html('<p>' + response.data.message + '</p>'); // Sử dụng message từ trong data
+                }
+            },
+            error: function() {
+                $('#cartItems').html('<p>Giỏ hàng trống.</p>');
             }
-        }
-        </script>
+        });
+    }
+
+    function renderCart(items) {
+    totalPrice = 0; // Khởi tạo lại giá trị mỗi khi renderCart được gọi
+    let html = '<table class="table table-hover"><thead><tr><th>Sản phẩm</th><th>Số lượng</th><th>Giá</th><th>Tổng tiền</th><th>Hành động</th></tr></thead><tbody>';
+
+    items.forEach(item => {
+        const itemTotal = item.quantity * item.product.price;
+        totalPrice += itemTotal;
+        html += `<tr>
+                    <td>${item.product.name}</td>
+                    <td>
+                        <input type="number" class="form-control" value="${item.quantity}" min="1" onchange="updateQuantity('${item._id}', this.value)">
+                    </td>
+                    <td>${item.product.price.toLocaleString('vi-VN', { style: 'currency', currency: 'VND' })}</td>
+                    <td>${itemTotal.toLocaleString('vi-VN', { style: 'currency', currency: 'VND' })}</td>
+                    <td>
+                        <button class="btn btn-danger" onclick="removeItem('${item._id}')">Xóa</button>
+                    </td>
+                 </tr>`;
+    });
+
+    html += `</tbody><tfoot><tr><td colspan="5" class="text-right font-weight-bold">Tổng cộng: ${totalPrice.toLocaleString('vi-VN', { style: 'currency', currency: 'VND' })}</td></tr></tfoot></table>`;
+    html += '<button class="btn btn-primary btn-lg btn-block" onclick="goToCheckout()">Thanh toán</button>';
+    $('#cartItems').html(html);
+}
+
+ 
 
 
+    // window.updateQuantity = function(itemId, quantity) {
+    //     $.ajax({
+    //         url: '/cart/update',
+    //         type: 'POST',
+    //         headers: {
+    //             Authorization: 'Bearer ' + localStorage.getItem('token')
+    //         },
+    //         data: {
+    //             itemId: itemId,
+    //             quantity: quantity
+    //         },
+    //         success: function(response) {
+    //             fetchCart(); // Tải lại giỏ hàng sau khi cập nhật
+    //         },
+    //         error: function() {
+    //             alert('Không thể cập nhật số lượng.');
+    //         }
+    //     });
+    // };
+
+    window.removeItem = function(itemId) {
+        $.ajax({
+            url: '/cart/remove',
+            type: 'POST',
+            headers: {
+                Authorization: 'Bearer ' + token
+            },
+            data: {
+                itemId: itemId
+            },
+            success: function(response) {
+                fetchCart(); // Tải lại giỏ hàng sau khi xóa sản phẩm
+            },
+            error: function() {
+                alert('Không thể xóa sản phẩm.');
+            }
+        });
+    };
+
+    fetchCart();
+});
+function goToCheckout() {
+    localStorage.setItem('totalPrice', totalPrice); // Sử dụng biến toàn cục
+    window.location.href = '/checkout';
+}
+    </script>
 </body>
-
 </html>
